@@ -95,6 +95,7 @@ Error is fixed, was due to a src/services/Services.hpp old code
   directly contact the server
   - [ ] Implement unit test, at least to be sure a server can't add itself twice
 **** TODO Client work
+     CLOCK: [2016-11-01 mar. 23:49]--[2016-11-02 mer. 00:16] =>  0:27
      CLOCK: [2016-11-01 mar. 23:04]--[2016-11-01 mar. 23:46] =>  0:42
      CLOCK: [2016-11-01 mar. 22:01]--[2016-11-01 mar. 22:55] =>  0:54
      CLOCK: [2016-10-31 lun. 04:36]--[2016-10-31 lun. 04:47] =>  0:11
@@ -226,6 +227,9 @@ Error is fixed, was due to a src/services/Services.hpp old code
   - [-] Move actual GameEngine test in a MainMenu gamestate
     - [X] Create the main class
     - [ ] Move current GameEngine::run() content to MainMenu gamestate
+      - [ ] Create a simpler GameState::loadLayout function
+	The problem here is with the root window, maybe keep a pointer to this
+	or try to get it each time ?
       We need a GameState::draw() callback at least for geometrybuffers
 - [ ] May remove the src/client/LoadingBar.* (not used anymore)
 - [ ] If CI fixed, add image in README.md
